--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,56 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Welcome to Tenantum – your property management companion"
 ---
 
 ## Setting up
 
-Get your documentation site up and running in minutes.
+Get started with Tenantum in just a few steps.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
+<Card title="Start here" icon="rocket" horizontal href="/quickstart">
+  Follow our three-step quickstart guide to set up your first property and tenant.
 </Card>
 
 ## Make it yours
 
-Design a docs site that looks great and empowers your users.
+Personalize your Tenantum account to fit your needs.
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+  <Card title="Set up your profile" icon="user" href="/onboarding">
+    Complete your landlord profile and upload your branding.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Add your first property" icon="house" href="/features/properties">
+    Create and configure your first property in minutes.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="Add tenants and leases" icon="file-contract" href="/features/tenants-leases">
+    Add tenants and set up their lease agreements.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+  <Card title="Track rent payments" icon="money-bill" href="/features/rent-payments">
+    Record payments and track outstanding balances.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Explore Core Features
 
-Everything you need to create world-class documentation.
+Everything you need to manage your rentals.
 
 <Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+  <Card title="Properties & Units" icon="building" href="/features/properties">
+    Organize and manage properties, units, and occupancy status.
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
+  <Card title="Tenant & Lease Management" icon="id-card" href="/features/tenants-leases">
+    Manage tenants, leases, and rental terms with ease.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
+  <Card title="Rent Collection" icon="credit-card" href="/features/rent-payments">
+    Track rent payments and overdue balances.
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+  <Card title="Maintenance Requests" icon="tools" href="/maintenance/requests">
+    Log, track, and resolve tenant maintenance requests.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Need help?
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
+<Card title="Visit Support" icon="life-ring" href="/support/troubleshooting">
+  Access our FAQ and support resources for quick assistance.
 </Card>
