--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,100 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Set up Tenantum in minutes and start managing your properties efficiently."
 ---
 
 ## Get started in three steps
 
-Get your documentation site running locally and make your first customization.
+Set up your Tenantum account, add your first property, and start tracking rent.
 
-### Step 1: Set up your local environment
+---
+
+### Step 1: Create Your Account
 
 <AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
+  <Accordion icon="user-plus" title="Sign up for Tenantum">
+    1. Go to [app.tenantum.com](https://app.tenantum.com).  
+    2. Enter your name, email, and secure password.  
+    3. Verify your email to activate your account.  
+
+    <Tip>Your dashboard will open automatically after email verification.</Tip>
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
+
+  <Accordion icon="user" title="Complete your profile">
+    - Add your phone number and landlord/company details.
+    - Upload your company logo (optional) to personalize your dashboard.
   </Accordion>
 </AccordionGroup>
 
-### Step 2: Deploy your changes
+---
+
+### Step 2: Add Your First Property
 
 <AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+  <Accordion icon="house" title="Create a property">
+    - Go to **Properties → Add Property**  
+    - Enter property name, address, and type (e.g., Apartment, House).  
+    - Add property photos for easy identification.
+  </Accordion>
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
+  <Accordion icon="building" title="Set up units (if applicable)">
+    - For multi-unit properties, add each unit:  
+      - Unit number/name  
+      - Size or type (e.g., 2-bedroom)  
+      - Rent price  
+    - Mark units as vacant or occupied.  
   </Accordion>
 </AccordionGroup>
 
-### Step 3: Go live
+---
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+### Step 3: Add Tenants & Record Rent
+
+<AccordionGroup>
+  <Accordion icon="id-card" title="Add a tenant">
+    - Go to **Tenants → Add Tenant**  
+    - Enter tenant name, email, and phone number.  
+  </Accordion>
+
+  <Accordion icon="file-contract" title="Create a lease">
+    - Assign tenant to a unit.  
+    - Set lease start and end dates.  
+    - Enter rent amount and payment frequency (e.g., monthly).  
+  </Accordion>
+
+  <Accordion icon="money-bill" title="Record your first payment">
+    - Navigate to **Payments → Record Payment**.  
+    - Select tenant, input payment details, and save.  
+    - Tenant’s balance updates automatically.
+  </Accordion>
+</AccordionGroup>
+
+---
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
+Now that you're set up, explore these core features:
 
 <CardGroup cols={2}>
+  <Card title="Manage Properties" icon="house" href="/features/properties">
+    Learn how to organize and edit your properties.
+  </Card>
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+  <Card title="Track Rent Payments" icon="money-bill" href="/features/rent-payments">
+    Monitor rent collection and overdue balances.
+  </Card>
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
+  <Card title="Add Maintenance Requests" icon="tools" href="/maintenance/requests">
+    Log, track, and resolve maintenance issues.
+  </Card>
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card title="Configure Notifications" icon="bell" href="/notifications/rent-reminders">
+    Set up rent reminders and lease expiry alerts.
+  </Card>
 </CardGroup>
 
+---
+
 <Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
+  **Need help?** Visit our [Support Center](/support/troubleshooting) or contact us at **support@tenantum.com**.
 </Note>
