--- a/onboarding.mdx
+++ b/onboarding.mdx
@@ -3,52 +3,150 @@ title: "Onboarding"
 description: "Set up your Tenantum account quickly with basic profile and regional settings."
 ---
 
-## Complete onboarding in 2 steps
+## Welcome to Tenantum
 
-The Tenantum onboarding form is simple: just enter your **basic info** and **regional preferences** to personalize your account.
-
----
-
-### Step 1: Basic Info
-
-<AccordionGroup>
-  <Accordion icon="user" title="Basic Information">
-    Fill out your profile details:
-    - **Full Name**  
-    - **Email Address** (pre-filled from sign-up)  
-    - **Phone Number** (optional)  
-
-    <Tip>This info appears in your account header and tenant-facing communications.</Tip>
-  </Accordion>
-</AccordionGroup>
+Complete your account setup in just 2 simple steps to start managing your properties.
 
 ---
 
-### Step 2: Regional & Timezone
+## Step 1: Business Information
 
-<AccordionGroup>
-  <Accordion icon="globe" title="Regional Preferences">
-    Select your default region and timezone:
-    - **Country/Region** (affects currency and formatting)  
-    - **Timezone** (ensures correct rent reminders & due dates)  
+Set up your business details that will appear on invoices and tenant communications.
 
-    <Tip>You can change these anytime from <b>Settings → Account</b>.</Tip>
-  </Accordion>
-</AccordionGroup>
+<Card
+  title="Business Profile"
+  icon="building"
+  style={{
+    border: "1px solid #72D400",
+    borderRadius: "0.5rem",
+  }}
+>
+  <div style={{ marginBottom: "1rem" }}>
+    <strong>Required Information:</strong>
+  </div>
+
+  <ul style={{ margin: "0", paddingLeft: "1.5rem" }}>
+    <li>
+      <strong>Business Name</strong> - Your company or individual name
+    </li>
+    <li>
+      <strong>Business Address</strong> - Your registered business address
+    </li>
+    <li>
+      <strong>Email Address</strong> - Primary contact email
+    </li>
+    <li>
+      <strong>Phone Number</strong> - Business contact number
+    </li>
+  </ul>
+
+  <div
+    style={{
+      background: "#f8f9fa",
+      padding: "1rem",
+      borderRadius: "0.5rem",
+      marginTop: "1rem",
+      borderLeft: "3px solid #72D400",
+    }}
+  >
+    <strong>Note:</strong> This information will appear on all invoices and
+    tenant communications.
+  </div>
+</Card>
 
 ---
 
-## ✅ Final Step: Start Using Tenantum
+## Step 2: Regional Settings
+
+Configure your regional preferences for currency, date formats, and timezone.
+
+<Card
+  title="Regional Configuration"
+  icon="globe"
+  style={{
+    border: "1px solid #72D400",
+    borderRadius: "0.5rem",
+  }}
+>
+  <div style={{ marginBottom: "1rem" }}>
+    <strong>Regional Settings:</strong>
+  </div>
+
+  <ul style={{ margin: "0", paddingLeft: "1.5rem" }}>
+    <li>
+      <strong>Region Selection</strong> - Choose your country/region
+    </li>
+    <li>
+      <strong>Date Format</strong> - Select your preferred date format
+    </li>
+    <li>
+      <strong>Timezone</strong> - Set your local timezone
+    </li>
+  </ul>
+
+  <div
+    style={{
+      background: "#f8f9fa",
+      padding: "1rem",
+      borderRadius: "0.5rem",
+      marginTop: "1rem",
+      borderLeft: "3px solid #72D400",
+    }}
+  >
+    <strong>Note:</strong> You can change these settings anytime from Settings →
+    Account.
+  </div>
+</Card>
+
+---
+
+## You're All Set!
+
+Your Tenantum account is ready with your business information and regional preferences configured.
+
+<div
+  style={{
+    background: "#f8f9fa",
+    padding: "1.5rem",
+    borderRadius: "0.5rem",
+    textAlign: "center",
+    border: "1px solid #72D400",
+  }}
+>
+  <h3 style={{ margin: "0 0 1rem 0", color: "#72D400" }}>
+    🎉 Ready to get started?
+  </h3>
+  <p style={{ margin: "0", color: "#6c757d" }}>
+    Choose your next step to begin managing your properties.
+  </p>
+</div>
+
+## Next Steps
 
 <CardGroup cols={2}>
   <Card title="Add Properties" icon="house" href="/features/properties">
     Create your first property and begin managing units.
   </Card>
-  <Card title="Add Tenants & Leases" icon="file-contract" href="/features/tenants-leases">
+  <Card
+    title="Add Tenants & Leases"
+    icon="file-contract"
+    href="/features/tenants-leases"
+  >
     Set up tenants and leases to start tracking rent.
   </Card>
 </CardGroup>
 
-<Note>
-🎉 **You're done!** Your account is ready with the correct region, timezone, and basic info.
-</Note>
+<div
+  style={{
+    background: "#f8f9fa",
+    padding: "1rem",
+    borderRadius: "0.5rem",
+    marginTop: "2rem",
+    borderLeft: "3px solid #72D400",
+  }}
+>
+  <strong>Need help?</strong> Contact our support team at
+  <a href="mailto:support@tenantum.com" style={{ color: "#72D400" }}>
+    support@tenantum.com
+  </a>
+</div>
