Add feature docs and update navigation structure
Added new documentation files for features: expenses, income, leads, maintenance, properties, reports, tenants-leases, and units. Updated docs.json to reorganize navigation tabs, icons, and groups, and improved global anchors and navbar links. Updated logo SVGs for light and dark themes. Minor content updates in onboarding and quickstart docs, and style adjustments in styles.css.

--- a/onboarding.mdx
+++ b/onboarding.mdx
@@ -25,20 +25,21 @@ Set up your business details that will appear on invoices and tenant communicati
     <strong>Required Information:</strong>
   </div>
 
-  <ul style={{ margin: "0", paddingLeft: "1.5rem" }}>
-    <li>
-      <strong>Business Name</strong> - Your company or individual name
-    </li>
-    <li>
-      <strong>Business Address</strong> - Your registered business address
-    </li>
-    <li>
-      <strong>Email Address</strong> - Primary contact email
-    </li>
-    <li>
-      <strong>Phone Number</strong> - Business contact number
-    </li>
-  </ul>
+{" "}
+<ul style={{ margin: "0", paddingLeft: "1.5rem" }}>
+  <li>
+    <strong>Business Name</strong> - Your company or individual name
+  </li>
+  <li>
+    <strong>Business Address</strong> - Your registered business address
+  </li>
+  <li>
+    <strong>Email Address</strong> - Primary contact email
+  </li>
+  <li>
+    <strong>Phone Number</strong> - Business contact number
+  </li>
+</ul>
 
   <div
     style={{
@@ -72,17 +73,18 @@ Configure your regional preferences for currency, date formats, and timezone.
     <strong>Regional Settings:</strong>
   </div>
 
-  <ul style={{ margin: "0", paddingLeft: "1.5rem" }}>
-    <li>
-      <strong>Region Selection</strong> - Choose your country/region
-    </li>
-    <li>
-      <strong>Date Format</strong> - Select your preferred date format
-    </li>
-    <li>
-      <strong>Timezone</strong> - Set your local timezone
-    </li>
-  </ul>
+{" "}
+<ul style={{ margin: "0", paddingLeft: "1.5rem" }}>
+  <li>
+    <strong>Region Selection</strong> - Choose your country/region
+  </li>
+  <li>
+    <strong>Date Format</strong> - Select your preferred date format
+  </li>
+  <li>
+    <strong>Timezone</strong> - Set your local timezone
+  </li>
+</ul>
 
   <div
     style={{
@@ -138,14 +140,17 @@ Your Tenantum account is ready with your business information and regional prefe
 
 <div
   style={{
-    background: "#f8f9fa",
+
     padding: "1rem",
     borderRadius: "0.5rem",
     marginTop: "2rem",
     borderLeft: "3px solid #72D400",
-  }}
+
+}}
+
 >
-  <strong>Need help?</strong> Contact our support team at
+
+  <strong>Need help?</strong> Contact our support team at {" "}
   <a href="mailto:support@tenantum.com" style={{ color: "#72D400" }}>
     support@tenantum.com
   </a>
