--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,98 +3,76 @@ title: "Quickstart"
 description: "Set up Tenantum in minutes and start managing your properties efficiently."
 ---
 
-## Get started in three steps
+## Get Started in 3 Simple Steps
 
-Set up your Tenantum account, add your first property, and start tracking rent.
-
----
-
-### Step 1: Create Your Account
-
-<AccordionGroup>
-  <Accordion icon="user-plus" title="Sign up for Tenantum">
-    1. Go to [app.tenantum.com](https://app.tenantum.com).  
-    2. Enter your name, email, and secure password.  
-    3. Verify your email to activate your account.  
-
-    <Tip>Your dashboard will open automatically after email verification.</Tip>
-  </Accordion>
-
-  <Accordion icon="user" title="Complete your profile">
-    - Add your phone number and landlord/company details.
-    - Upload your company logo (optional) to personalize your dashboard.
-  </Accordion>
-</AccordionGroup>
+Add your property, create a unit, onboard tenants with leases, and start recording rent payments—all in one flow.
 
 ---
 
-### Step 2: Add Your First Property
+### Step 1: Create Your Property & Unit
 
 <AccordionGroup>
-  <Accordion icon="house" title="Create a property">
+  <Accordion icon="house" title="Add Your First Property" defaultOpen>
     - Go to **Properties → Add Property**  
-    - Enter property name, address, and type (e.g., Apartment, House).  
-    - Add property photos for easy identification.
+    - Enter **property name**, **address**, and select type (**Commercial** or **Residential**)  
+    - Upload property photos (optional)  
   </Accordion>
 
-  <Accordion icon="building" title="Set up units (if applicable)">
-    - For multi-unit properties, add each unit:  
-      - Unit number/name  
-      - Size or type (e.g., 2-bedroom)  
-      - Rent price  
-    - Mark units as vacant or occupied.  
+  <Accordion icon="building" title="Create a Unit" defaultOpen>
+    - After adding a property, create a **unit**:  
+      - **Unit Name/Number** (e.g., A-101)  
+      - **Unit Size** (e.g., 1200 sq ft)  
+      - If **Commercial**: confirm type (Shop, Office, etc.)  
+      - If **Residential**: add **Bedrooms** and **Bathrooms** count  
   </Accordion>
 </AccordionGroup>
 
 ---
 
-### Step 3: Add Tenants & Record Rent
+### Step 2: Add Tenant & Lease in One Form
 
 <AccordionGroup>
-  <Accordion icon="id-card" title="Add a tenant">
+  <Accordion icon="id-card" title="Tenant Information" defaultOpen>
     - Go to **Tenants → Add Tenant**  
-    - Enter tenant name, email, and phone number.  
+    - Enter tenant’s **name, email, and phone**  
+    - Add **co-tenants** (if any) in the same form  
+    - (Optional) Enable **Tenant Portal Access** for tenants with emails  
   </Accordion>
 
-  <Accordion icon="file-contract" title="Create a lease">
-    - Assign tenant to a unit.  
-    - Set lease start and end dates.  
-    - Enter rent amount and payment frequency (e.g., monthly).  
-  </Accordion>
-
-  <Accordion icon="money-bill" title="Record your first payment">
-    - Navigate to **Payments → Record Payment**.  
-    - Select tenant, input payment details, and save.  
-    - Tenant’s balance updates automatically.
+  <Accordion icon="file-contract" title="Lease Details" defaultOpen>
+    - On the same form, add **lease details**:  
+      - **Lease Start and End Dates**  
+      - **Rent Amount** and **Payment Frequency** (e.g., monthly)  
+      - **Security Deposit** (if applicable)  
+    - Confirm to create the tenant + lease in one step.
   </Accordion>
 </AccordionGroup>
 
 ---
 
-## Next steps
+### Step 3: Record Payments & Use Tenant Portal
 
-Now that you're set up, explore these core features:
+<AccordionGroup>
+  <Accordion icon="money-bill" title="Record Payments" defaultOpen>
+    - Navigate to **Invoices → Record Payment**  
+    - Select tenant, enter payment details, and choose payment method (Cash, Bank etc.)  
+    - Save—tenant balance updates instantly.  
+  </Accordion>
 
-<CardGroup cols={2}>
-  <Card title="Manage Properties" icon="house" href="/features/properties">
-    Learn how to organize and edit your properties.
-  </Card>
-
-  <Card title="Track Rent Payments" icon="money-bill" href="/features/rent-payments">
-    Monitor rent collection and overdue balances.
-  </Card>
-
-  <Card title="Add Maintenance Requests" icon="tools" href="/maintenance/requests">
-    Log, track, and resolve maintenance issues.
-  </Card>
-
-  <Card title="Configure Notifications" icon="bell" href="/notifications/rent-reminders">
-    Set up rent reminders and lease expiry alerts.
-  </Card>
-</CardGroup>
+  <Accordion icon="user" title="Tenant Portal Access" defaultOpen>
+    - Tenants with emails can access their portal to:  
+      - View lease and rent details  
+      - Submit **payment receipts** for approval (manual verification by landlord)  
+      - Request maintenance 
+    - Landlords can also record payments manually anytime.  
+  </Accordion>
+</AccordionGroup>
 
 ---
+
+## 🎉 You’re Ready!
 
 <Note>
-  **Need help?** Visit our [Support Center](/support/troubleshooting) or contact us at **support@tenantum.com**.
+  💡 **Tip:** Adding a property, creating a unit, and onboarding a tenant with a
+  lease can all be done in under 5 minutes.
 </Note>
